# Projects1

P1-Connect-with-LLM-and-generate-user-data/: Main.py  README.md  links.txt  pyproject.toml  user.txt
P10-Test-linear-decisiontree-randonforest-model/: Price prediction basic.docx  README.md  links.txt  property_price_model.joblib  property_prices.csv  property_prices_nonlinear.csv  streamlit_app.py
P10-Test-liner-decisiontree-randonforest-model/: Readme
P3-create-RAG-pipeline-with-groq/: Main.py  Main2.py  README.md  Requirements.txt  check_models.py  data.txt  links - Copy.txt  pyproject.toml  rag_index.pkl
P8-MCP-server-for-restaurant-review-data-that-is-added-to-vector-db./: README.md  Result MCP server stdio.docx  Working solution- restaurant review search- webui.docx  claude_desktop_config.json  conversation_memory.db  links.txt  main.py  mcp_server.py  memory.py  requirements.txt  test_mcp.py  vector.py
