[project]
name = "python-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.3",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
]
