[project]
name = "project3-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.3",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
]
